Fixed the overlapping of the navigation bar and the masthead header

--- a/angular-music-streaming-application/src/app/content/layout/navigation-bar/navigation-bar.component.scss
+++ b/angular-music-streaming-application/src/app/content/layout/navigation-bar/navigation-bar.component.scss
@@ -1,5 +1,5 @@
 .main-navigation {
-  height: 80px;
+  height: auto;
 
   .nav-item a {
     font-weight: 500;
@@ -11,5 +11,15 @@
 
   .signup-button {
     background-color: firebrick !important;
+  }
+
+  .navbar-collapse.collapse.show {
+    .nav-item a {
+      text-align: center;
+    }
+
+    .navigation-actions {
+      justify-content: center;
+    }
   }
 }
